registry.oneclick.yaml
# kind: StorageClass
# apiVersion: storage.k8s.io/v1
# metadata:
#   name: local-storage
#   annotations:
#     storageclass.kubernetes.io/is-default-class: "true"
#   labels:
#     kubernetes.io/cluster-service: "true"
#     addonmanager.kubernetes.io/mode: EnsureExists
# provisioner: kubernetes.io/no-provisioner
# volumeBindingMode: WaitForFirstConsumer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: registry
  name: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: registry
    spec:
      containers:
        - image: registry:2
          imagePullPolicy: Always
          name: registry
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          volumeMounts:
            - name: storage
              mountPath: /var/lib/registry
            # - name: config
            #   mountPath: /etc/docker/registry
            #   readOnly: true
            - name: htpasswd
              mountPath: /auth
              readOnly: true
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            timeoutSeconds: 30
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "256Mi"
              cpu: "1000m"
      volumes:
        - name: htpasswd
          secret:
            secretName: docker-registry
            items:
            - key: HTPASSWD
              path: htpasswd
        - name: storage
          persistentVolumeClaim:
            claimName: registry-pvc
      # - name: certs
      #   hostPath:
      #     path: /mnt/registry_data/certs/
      # - name: auth
      #   hostPath:
      #     path: /mnt/registry_data/
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: registry
  labels:
    app: registry
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    app: registry
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: registry-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/secure-backends: "true"
    ingress.kubernetes.io/proxy-body-size: 2046m
    ingress.kubernetes.io/client-max-body-size: 2046m
    nginx.ingress.kubernetes.io/proxy-body-size: 2046m
    nginx.ingress.kubernetes.io/client-max-body-size: 2046m
  namespace: default
spec:
  tls:
    - hosts:
        - registry.myhost.io
      secretName: registry-tls-secret
  rules:
    - host: registry.myhost.io
      http:
        paths:
          - path: /
            backend:
              serviceName: registry
              servicePort: 5000
